--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <h4 class="text-white font-weight-medium px-3">Pistola de massagem</h4>
                     <p class="text-white px-3 mb-3">Vibrações terapêuticas precisas, alívio muscular eficaz, recuperação mais rápida e sensação revigorante com a pistola de massagem.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -345,7 +345,7 @@
                     <h4 class="text-white font-weight-medium px-3">Bota Pneumática</h4>
                     <p class="text-white px-3 mb-3">Compressão suave, melhora da circulação, redução do inchaço e recuperação acelerada com a bota pneumática terapêutica.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -355,7 +355,7 @@
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Sucção controlada, alívio da tensão, aumento da circulação sanguínea, redução de inflamações e relaxamento profundo com as ventosas terapêuticas.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -365,7 +365,7 @@
                     <h4 class="text-white font-weight-medium px-3">Pedras quentes</h4>
                     <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das pedras quentes é verdadeiramente revigorante.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -375,7 +375,7 @@
                     <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
                     <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -386,7 +386,7 @@
                     <h4 class="text-white font-weight-medium px-3">Ambiente climatizado</h4>
                     <p class="text-white px-3 mb-3">Conforto ideal, ambiente agradável, temperatura regulada, experiência relaxante e climatização para o seu bem-estar.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -396,7 +396,7 @@
                     <h4 class="text-white font-weight-medium px-3">TENS</h4>
                     <p class="text-white px-3 mb-3">Estimulação elétrica suave, alívio da dor, relaxamento muscular, bem-estar terapêutico e tratamento eficaz com o TENS.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -419,7 +419,7 @@
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Sucção controlada, alívio da tensão, aumento da circulação sanguínea, redução de inflamações e relaxamento profundo com as ventosas terapêuticas.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -429,7 +429,7 @@
                     <h4 class="text-white font-weight-medium px-3">Pedras quentes</h4>
                     <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das pedras quentes é verdadeiramente revigorante.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -439,7 +439,7 @@
                     <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
                     <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -521,7 +521,7 @@
                             <p>Estamos abertos para atendê-lo com cuidado e dedicação, de:</p>
                             <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Instituto Fisiologic</h6>
                             <ul class="list-inline">
-                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 07:00 - 12:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 07:00 - 12:00 e 19:00 - 20:00</li>
                             </ul>
                              <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Espaço Hayanna</h6>
                             <ul class="list-inline">
@@ -690,6 +690,22 @@
                         <div class="position-relative">
                             <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
+                                <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;" alt="">
+                                <div class="ml-3">
+                                    <h6 class="text-uppercase">L.A.N</h6>
+                                    <span>Profession</span>
+                                     <p> <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
+                                <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
+                                <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
+                                <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
+                                <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg></p>
+                                </div>
+                            </div>
+                            <p class="m-0">Fui atendida pelo William, e Profissionalismo pra mim é a palavra que define todo seu trabalho. Profissional competente, com amor ao que faz. Fui prontamente atendida e resolveu meu problema. Recomendo.</p>
+                        </div>
+                        <div class="position-relative">
+                            <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
+                            <div class="d-flex align-items-center mb-3">
                                 <!---<img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" style="width: 60px; height: 60px;" alt="">-->
                               
                                 <div class="ml-3">
@@ -702,24 +718,9 @@
                                 <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg></p>
                                 </div>
                             </div>
-                            <p class="m-0">Excelente profissional, muito educado e trabalha com seriedade</p>
+                            <p class="m-0">Excelente profissional, muito educado e trabalha com seriedade.</p>
                         </div>
-                        <div class="position-relative">
-                            <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
-                            <div class="d-flex align-items-center mb-3">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;" alt="">
-                                <div class="ml-3">
-                                    <h6 class="text-uppercase">Client Name</h6>
-                                    <span>Profession</span>
-                                     <p> <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
-                                <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
-                                <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
-                                <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
-                                <svg class="goldstar" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg></p>
-                                </div>
-                            </div>
-                            <p class="m-0">Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
-                        </div>
+                        
                         <div class="position-relative">
                             <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
