--- a/preco.html
+++ b/preco.html
@@ -176,7 +176,7 @@
                     <img class="img-fluid w-100" src="img/l1.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Terapia mista</h4>
+                    <h4 class="mb-4">Terapia mista - Massagem Terapêutica Unificada</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br><strong>Dinâmica:</strong> Terapia individualizada onde abrange todas as técnicas e recursos do terapeuta, sendo aplicadas de acordo com os objetivos, preferências e necessidades do cliente.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
