--- a/index.html
+++ b/index.html
@@ -534,8 +534,7 @@
                              <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Espaço Hayanna</h6>
                             <ul class="list-inline">
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 19:00 - 22:00</li>
-                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Sabado: 07:00 - 22:00</li>
-                                <li class="h6 py-1"><i class="far fa-circle text-primary clock2"></i>Domingo: 09:00 - 18:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Sabado, domingo e feriados: 08:00 - 18:00</li>
                             </ul>
                             <a href="" class="btn btn-primary mt-2">Agendar</a>
                         </div>
