--- a/contato.html
+++ b/contato.html
@@ -270,7 +270,7 @@
                 <div class="col-lg-6 mt-5">
                   
                         <img src="img/fisiologic.png" style=" max-height: 150px; ">
-                        <h3 class="pt-3">Instituto fisiologic</h3>
+                        <h3 class="p-3">Instituto fisiologic</h3>
                     <ul class="list-inline">
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 07:00 - 12:00 e 19:00 - 20:00</li>
                             </ul>
@@ -284,7 +284,7 @@
                 </div>
                  <div class="col-lg-6 mt-5">
                      <img src="img/hana.png" style="max-height: 150px; ">
-                        <h3 class="pt-3">Espaço Hayanna</h3>
+                        <h3 class="p-3">Espaço Hayanna</h3>
                      <ul class="list-inline">
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 19:00 - 22:00</li>
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Sabado, domingo e feriados: 08:00 - 18:00</li>
