--- a/contato.html
+++ b/contato.html
@@ -272,7 +272,7 @@
                         <img src="img/fisiologic.png" style=" max-height: 150px; ">
                         <h3 class="p-3">Instituto fisiologic</h3>
                     <ul class="list-inline">
-                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 07:00 - 12:00 e 19:00 - 20:00</li>
+                                <li class="h6 py-1" style="padding-bottom: 37.3px !important;"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 07:00 - 12:00 e 19:00 - 20:00</li>
                             </ul>
                         <p>R. das Pitangueiras, 461 - Jardim, Santo André - SP, 09090-150</p>
                         <a class="btn btn-primary d-lg-block d-none mb-3" href="https://www.google.com/maps/dir//Instituto+Fisiologic+Santo+Andr%C3%A9+-+Tratamento+para+Coluna.+Instituto+Trata+R.+das+Pitangueiras,+461+-+Jardim+Santo+Andr%C3%A9+-+SP+09090-150/@-23.6631539,-46.5478358,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x94ce439c1cb1c673:0xc16d4d117d319ad3!2m2!1d-46.5407121!2d-23.650039?entry=ttu" target="_blank"><img src="img/rota.png"/> Rotas</a>
