--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 19:00 - 22:00</li>
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Sabado, domingo e feriados: 08:00 - 18:00</li>
                             </ul>
-                            <a href="" class="btn btn-primary mt-2">Agendar</a>
+                            <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." class="btn btn-primary mt-2">Agendar</a>
                         </div>
                     </div>
                 </div>
