--- a/preco.html
+++ b/preco.html
@@ -129,7 +129,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link " data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
+                            <a href="servicos#tu" class="dropdown-item">Terapia unificada</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
                             <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Terapia mista - Massagem Terapêutica Unificada - Técnica/terapia unificada - Programa reestaurativo</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br><strong>Dinâmica:</strong> Terapia individualizada onde abrange todas as técnicas e recursos do terapeuta, sendo aplicadas de acordo com os objetivos, preferências e necessidades do cliente.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br><strong>Dinâmica:</strong> Terapia individualizada onde abrange todas as técnicas e recursos do terapeuta, sendo aplicadas de acordo com os objetivos, preferências e necessidades do cliente.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Terapia%20unificada." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -339,7 +339,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
+                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Terapia unificada</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
