--- a/servicos.html
+++ b/servicos.html
@@ -170,7 +170,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/f2.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/f2.png" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Terapia mista - Massagem Terapêutica Unificada - Técnica/terapia unificada - Programa reestaurativo</h1>
