--- a/preco.html
+++ b/preco.html
@@ -173,7 +173,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-3 pb-lg-0 text-center">
-                    <img class="img-fluid w-100" src="img/l1.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/f2.png" alt="">
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Terapia mista - Massagem Terapêutica Unificada - Técnica/terapia unificada - Programa reestaurativo</h4>
