--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Terapia unificada</h3>
-                            <p class="mx-md-5 px-5">Com base na avaliação, um plano personalizado será criado, e dentre todas as técnicas e recursos ao alcance do terapeuta, serão selecionandas as mais adequadas que trabalharão em sinergia para buscar o resultado que você almeja.</p>
+                            <p class="mx-md-5 px-5">Com base na avaliação, em seus objetivos e preferências um plano personalizado será criado, e dentre todas as técnicas e recursos disponíveis, serão selecionandas os mais adequados onde trabalharão em sinergia para buscar o resultado que você almeja.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Terapia%20unificada." target="_blank">Agendar</a>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#tu" >Saiba mais</a>
                         </div>
