--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="carousel-inner">
                  <div class="carousel-item position-relative active" style="min-height: 100vh;">
                     
-                    <a href="servicos#sueca"><img class="position-absolute w-100 h-100" src="img/Massage-Dark.jpg" style="object-fit: cover;"></a>
+                    <a href="servicos#sueca"><img class="position-absolute w-100 h-100" src="img/tu.jpg" style="object-fit: cover;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
